Мои первые изменения

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   </head>
   <body>
     <p>Git + Github</p>
+    <h1>Hello</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos harum
+      officiis libero rerum nobis corporis quae accusamus sed facilis at?
+    </p>
   </body>
 </html>
